--- a/styles.css
+++ b/styles.css
@@ -31,34 +31,6 @@ header h1 {
     font-size: 1.5em; /* Adjust size for mobile */
 }
 
-/* Additional styles for commandments */
-#commandment-container {
-    position: fixed; /* Position it at the bottom of the viewport */
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #333; /* Match the sidebar color or choose a suitable color */
-    padding: 10px;
-    text-align: center;
-    box-sizing: border-box; /* Include padding in width */
-}
-
-/* Styles for commandment text with fading effect */
-#commandment-text {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out; /* Reduced duration for quicker fade */
-    font-size: 1.5em;
-    text-align: center;
-    margin: 20px;
-}
-
-/* Class to show commandment text with fade in effect */
-#commandment-text.show {
-    opacity: 1;
-}
-
-
-
 .menu-toggle {
     background: none;
     border: none;
@@ -194,29 +166,6 @@ header h1 {
     -webkit-user-drag: none; /* Disable image dragging on webkit browsers */
 }
 
-/* Commandments styles */
-.commandments {
-    position: fixed;
-    bottom: 10px; /* Adjust as needed */
-    width: 100%;
-    text-align: center;
-    background-color: #333;
-    color: #e0e0e0;
-    padding: 10px;
-    box-sizing: border-box;
-}
-
-.commandment-text {
-    opacity: 0;
-    transition: opacity 1s ease-in-out; /* Fade effect */
-    font-size: 1.5em; /* Adjust as needed */
-    margin: 0;
-}
-
-.commandment-text.show {
-    opacity: 1;
-}
-
 /* Additional Mobile Adjustments */
 
 /* Ensure content is centered and fits well on mobile devices */
@@ -247,11 +196,11 @@ header h1 {
         transform: translateX(0); /* Show sidebar */
     }
 
-    /* Carousel adjustments */
+    /* Carousel adjustments for mobile */
     .carousel {
         width: 100%; /* Full width */
         margin: 0 auto; /* Center carousel */
-        left: 0; /* Remove any left offset */
+        left: -10px; /* Move carousel 10px to the left */
     }
 
     .carousel-inner {
